feat: coordinator login